@@ -16,8 +16,10 @@ inline int clink_wcwidth(char32_t c)
 }
 
 //------------------------------------------------------------------------------
+enum class ecma48_processor_flags { none = 0, bracket = 1<<0, apply_title = 1<<1, plaintext = 1<<2 };
+DEFINE_ENUM_FLAG_OPERATORS(ecma48_processor_flags);
+void ecma48_processor(const char* in, str_base* out, unsigned int* cell_count, ecma48_processor_flags flags=ecma48_processor_flags::none);
 unsigned int cell_count(const char*);
-void ecma48_processor(const char* in, str_base* out, unsigned int* cell_count, bool bracket=false, bool apply_title=false);
 enum ecma48_state_enum;
 
 //------------------------------------------------------------------------------
