@@ -4,7 +4,9 @@
 
 ### v1.2.5
 
-- Added `os.expandenv()` function.
+- Added `os.expandenv()` function to expand environment variables in a string.
+- Added `console.cellcount()` function to count the cells a string will use when displayed.
+- Added `console.plaintext()` function to remove ANSI escape codes from a string.
 - Clink now sets `%=clink.bin%` that points to the Clink binaries directory.  This can be particularly useful for a portable installation of Clink so that scripts can find the Clink binaries directory and construct relative paths to other nearby files.
 - Fixed `history.sticky_search` with anchored history search.
 - Fixed `clink inject --profile` to use correct log file name while initially injecting.
